overflow and color fixes

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -157,7 +158,7 @@ main {
 }
 
 footer {
-  margin-top: 7em;
+  margin-top: 5em;
   position: absolute;
   top: 80%;
 }
